--- a/html-ex1-v1/index.html
+++ b/html-ex1-v1/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Aşağıdaki linkte yer alan metnin aynısı yapınız-->
+    <!-- https://www.duldabilgi.com/exercise/ex1 -->
 </body>
 </html>
